
<package>
  <name>trajec_plugin</name>
  <version>0.10.3</version>
  <description>
     a trajectory gui plugins for RViz.
  </description>
  <maintainer email="clewis@swri.org">ChrisLewis</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/NONE</url>
  <author>LawrenceLewis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/trajec_plugin_description.xml"/>
  </export>
</package>
